--- a/index.html
+++ b/index.html
@@ -7,11 +7,49 @@
     <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="./default.css" />
     <link rel="stylesheet" href="./main.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
   </head>
   <body>
     <div class="wrap">
       <div class="black-bg"></div>
-      <header></header>
+      <header>
+        <a href="" style="color: white; font-weight: bold">
+          코로나19 대응 방안에 대한 최신 정보를 확인하세요
+        </a>
+        <div class="gnb mt-sm">
+          <div class="logo">
+            <img
+              style="width: 102px; height: 32px"
+              src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Airbnb_Logo_B%C3%A9lo.svg/512px-Airbnb_Logo_B%C3%A9lo.svg.png"
+              alt=""
+            />
+          </div>
+          <div class="gnb-menu">
+            <ul>
+              <li class="active">숙소</li>
+              <li>체험</li>
+              <li>온라인 체험</li>
+            </ul>
+          </div>
+          <div class="menu">
+            <p>호스팅 되기</p>
+            <i class="bi bi-globe"></i>
+            <div>
+              <i class="bi bi-list"></i>
+              <i class="bi bi-person-circle"></i>
+            </div>
+          </div>
+          <div class="search">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
+            reiciendis quas aut natus magni sed dolorum voluptate a quasi.
+            Perferendis eius, a dolorem reprehenderit similique quibusdam ipsa
+            tempora? Sunt, nesciunt!
+          </div>
+        </div>
+      </header>
       <section class="notice"></section>
       <section class="mainBanner"></section>
       <section class="idea"></section>
