header 스타일 완료

--- a/index.html
+++ b/index.html
@@ -35,18 +35,36 @@
             </ul>
           </div>
           <div class="menu">
-            <p>호스팅 되기</p>
-            <i class="bi bi-globe"></i>
-            <div>
+            <p class="menu-hover">호스팅 되기</p>
+            <i class="bi bi-globe menu-hover"></i>
+            <div class="profile">
               <i class="bi bi-list"></i>
               <i class="bi bi-person-circle"></i>
             </div>
           </div>
           <div class="search">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
-            reiciendis quas aut natus magni sed dolorum voluptate a quasi.
-            Perferendis eius, a dolorem reprehenderit similique quibusdam ipsa
-            tempora? Sunt, nesciunt!
+            <ul class="searchUl">
+              <li>
+                위치
+                <br />
+                <span>어디로 여행가세요?</span>
+              </li>
+              <li>
+                체크인
+                <br />
+                <span>날짜 입력</span>
+              </li>
+              <li>
+                체크아웃
+                <br />
+                <span>날짜 입력</span>
+              </li>
+              <li>
+                인원
+                <br />
+                <span>게스트 추가</span>
+              </li>
+            </ul>
           </div>
         </div>
       </header>
