--- a/index.html
+++ b/index.html
@@ -68,7 +68,13 @@
           </div>
         </div>
       </header>
-      <section class="notice"></section>
+      <section class="notice mt-lg">
+        <p>
+          10만 명에 달하는 우크라이나 피란민에게 임시 <br />
+          숙소를 제공해주세요
+        </p>
+        <button>자세히 알아보기</button>
+      </section>
       <section class="mainBanner"></section>
       <section class="idea"></section>
       <section class="expression"></section>
