--- a/index.html
+++ b/index.html
@@ -75,7 +75,12 @@
         </p>
         <button>자세히 알아보기</button>
       </section>
-      <section class="mainBanner"></section>
+      <section class="mainBanner">
+        <div class="content">
+          <p>호기심을 자극하는 숙소로 떠나보세요</p>
+          <button><span>유연한 검색</span></button>
+        </div>
+      </section>
       <section class="idea"></section>
       <section class="expression"></section>
     </div>
