--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </p>
         <button>자세히 알아보기</button>
       </section>
-      <section class="mainBanner">
+      <section class="mainBanner mt-lg">
         <div class="content">
           <p>호기심을 자극하는 숙소로 떠나보세요</p>
           <button><span>유연한 검색</span></button>
