--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <button><span>유연한 검색</span></button>
         </div>
       </section>
-      <section class="idea">
+      <section class="idea mt-lg">
         <p class="heading">설레는 다음 여행을 위한 아이디</p>
         <div class="city mt-sm">
           <figure class="card">
@@ -126,7 +126,25 @@
           </figure>
         </div>
       </section>
-      <section class="expression"></section>
+      <section class="expression mt-lg" style="margin-bottom: 50px">
+        <p class="heading" style="grid-area: heading">
+          에어비앤비 체험 둘러보기
+        </p>
+        <div class="photoDiv">
+          <p>
+            여행 중 만나는<br />
+            이색적인 즐길 거리
+          </p>
+          <button>체험</button>
+        </div>
+        <div class="photoDiv">
+          <p>
+            집에서 만나는<br />
+            다양한 즐길 거리
+          </p>
+          <button>온라인 체험</button>
+        </div>
+      </section>
     </div>
   </body>
 </html>
